Fixed spacing on AddBillCard inputs.

--- a/frontend/src/css/App.css
+++ b/frontend/src/css/App.css
@@ -69,7 +69,7 @@ h6 {
 .main-right-column {
   width: 100%;
   height: 100%;
-  padding: 5% 0;
+  padding: 3% 0;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -129,22 +129,10 @@ h6 {
   text-align: center;
 }
 
-.card-header {
-  position: absolute;
-  top: 0;
-  left: 0;
-  background-color: #673AB7;
-  color: #fff;
-  padding: 16px 24px;
-  width: 100%;
-  border-radius: 5px  5px 0 0;
-  font-size: 1.5rem;
-}
-
 .card-50 {
   width: 80%;
   border-radius: 5px;
-  padding: calc(32px + 2.5rem) 32px 32px 32px;
+  padding: calc(32px + 3rem) 32px 32px 32px;
   background: #fff;
   display: flex;
   align-items: center;
@@ -163,6 +151,19 @@ h6 {
   justify-content: space-around;
   position: relative;
 }
+
+.card-header {
+  position: absolute;
+  top: 0;
+  left: 0;
+  background-color: #673AB7;
+  color: #fff;
+  padding: 16px 24px;
+  width: 100%;
+  border-radius: 5px  5px 0 0;
+  font-size: 1.5rem;
+}
+
 
 /** INPUT AND FORMS */
 form {
@@ -184,6 +185,10 @@ input[type=text]:focus,
 input[type=date]:focus {
   outline: none;
   border-bottom-color: #673AB7;
+}
+
+.input-wrapper {
+  padding-bottom: 24px;
 }
 
 .error {
@@ -210,7 +215,7 @@ input[type=date]:focus {
   height: 100%;
   padding: 16px 0;
   width: 60%;
-  margin: 16px auto 0;
+  margin: 0 auto;
 }
 
 .card-buttons button {
